# sv-oidc

./: README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  logs.py
app/crytography/: __init__.py  keys.py  symetryc_keys.py
app/database/: __init__.py  database_base.py  mongo_db.py  redis_db.py
app/models/: auth.py  token.py  user.py
app/routes/: auth.py  oidc.py  user.py
app/services/: auth.py  jwks.py  token.py  user.py
app/utils/: common.py  encryption.py  rate_limiter.py  security.py
